[gd_scene load_steps=2 format=2]

[ext_resource path="res://HUD/loseScreen.gd" type="Script" id=1]

[node name="loseScreen" type="CanvasLayer"]
pause_mode = 2
script = ExtResource( 1 )

[node name="Control" type="Control" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="jugarBut" type="Button" parent="Control"]
margin_left = 361.433
margin_top = 246.942
margin_right = 660.433
margin_bottom = 297.942
text = "Volver a Jugar"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="menuBut" type="Button" parent="Control"]
margin_left = 361.0
margin_top = 512.0
margin_right = 665.0
margin_bottom = 563.0
text = "SALIR AL MENU"
__meta__ = {
"_edit_use_anchors_": false
}

[connection signal="pressed" from="Control/jugarBut" to="." method="_on_jugarBut_pressed"]
[connection signal="pressed" from="Control/menuBut" to="." method="_on_menuBut_pressed"]
